# Cryptography

./: DES.c  README.md
DES/: DES.c
GAR/: testecliente.cpp  testeservidor.cpp  tokengenerator.cpp  tokengenerator.h
GAR/Cliente/: CMakeLists.txt
GAR/Cliente/include/: FileData.h  client.h
GAR/Cliente/src/: FileData.cpp  client.cpp
GAR/Servidor/: CMakeLists.txt
GAR/Servidor/Include/: FileData.h  server.h
GAR/Servidor/src/: FileData.cpp  server.cpp
GAR/received_files/: estou dentro da pasta.txt
ransomware/: Secrets.key  decrypt.py  encrypt.py  test1.txt  test2.txt  virus.py
